--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -2449,7 +2449,7 @@
         "claim_later": "Once you've imported the keys, you can claim these balances to an account of your choosing.",
         "confirm": "Wallet password (confirm)",
         "confirm_error": "The confirmation does not match the password",
-        "confirm_password": "Confirm Password",
+        "confirm_password": "Confirm Private Key",
         "congrat": "Congratulations, you're ready!",
         "console": "Local Wallet Management Console",
         "create": "Create",
@@ -2568,9 +2568,9 @@
         "totals": "Asset Totals",
         "unclaimed": "Unclaimed balances belonging to these keys",
         "unclaimed_vesting": "Unclaimed (vesting)",
-        "understand_1": "I understand that no one can recover my password if I lose or forget it",
-        "understand_2": "I have written down or otherwise stored my password",
-        "understand_3": " I understand that I will lose access to my funds if I lose my password",
+        "understand_1": "I understand that no one can recover my private key if I lose or forget it",
+        "understand_2": "I have written down or otherwise stored my private key",
+        "understand_3": " I understand that I will lose access to my funds if I lose my private key",
         "use_different": "Use different file",
         "use_password": "Use a cloud wallet",
         "use_wallet": "Use a local wallet",
