--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -906,8 +906,8 @@
             "title": "Blockchain",
             "transactions": "# of transactions",
             "trx": "Transaction",
-            "trx_per_block": "Trx/block",
-            "trx_per_sec": "Trx/s"
+            "trx_per_block": "Tx/block",
+            "trx_per_sec": "Tx/s"
         },
         "committee_member": {
             "title": "Committee member"
