--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1156,7 +1156,8 @@
             "rudex": "The %(asset)s asset is backed 1:1 by real %(backed)s and can be deposited or withdrawn using the gateway service provided by Rudex.",
             "trade": "The %(asset)s asset is backed 1:1 by real %(backed)s and can be deposited or withdrawn using the gateway service provided by Blocktrades.",
             "win": "",
-            "xbtsx": "The %(asset)s asset is backed 1:1 by real %(backed)s and can be deposited or withdrawn using the gateway service provided by XBTS."
+            "xbtsx": "The %(asset)s asset is backed 1:1 by real %(backed)s and can be deposited or withdrawn using the gateway service provided by XBTS.",
+            "iobanker": "The %(asset)s asset is backed 1:1 by real %(backed)s and can be deposited or withdrawn using the gateway service provided by ioBanker."
         },
         "balance": "Current balance",
         "balance_asset": "Current %(asset)s balance",
@@ -1291,6 +1292,13 @@
             "min_amount_error": "Please enter number >= minimum",
             "support_block": "For support, please contact XBTS at:",
             "under_construction": "Under Construction"
+        },
+        "iobanker": {
+                "coming_soon": "Coming soon",
+                "min_amount": "Minimum amount: %(minAmount)s %(symbol)s",
+                "min_amount_error": "Please enter number >= minimum",
+                "support_block": "For support, please contact ioBanker at:",
+                "under_construction": "Under Construction"
         },
         "your_account": "Your account"
     },
