removing testnet node for now, adding marketing partner and charity fee percents

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -88,6 +88,8 @@
             "membership": "Membership",
             "membership_expiration": "Membership Expiration",
             "network_percentage": "Network",
+            "marketing_partner_percentage": "Marketing Partner",
+            "charity_percentage": "Charity",
             "referral_link": "Your referral link",
             "referral_text": "Give this to link to people you want to refer to %(wallet_name)s",
             "referrals": "Referrals",
