--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -88,6 +88,8 @@
             "membership": "Membership",
             "membership_expiration": "Membership Expiration",
             "network_percentage": "Network",
+            "marketing_partner_percentage": "Marketing Partner",
+            "charity_percentage": "Charity",
             "referral_link": "Your referral link",
             "referral_text": "Give this to link to people you want to refer to %(wallet_name)s",
             "referrals": "Referrals",
@@ -2259,7 +2261,8 @@
             "witness_create": "Create witness",
             "witness_update": "Update witness",
             "witness_withdraw_pay": "Witness pay withdrawal",
-            "worker_create": "Create worker"
+            "worker_create": "Create worker",
+            "sale": "Sale"
         },
         "vesting_balance_create": "created vesting balance of",
         "waiting": "Waiting for confirmation..",
