sync language files
Signed-off-by: sschiessl-bcp <stefan.schiessl@blockchainprojectsbv.com>

--- a/app/assets/locales/locale-ru.json
+++ b/app/assets/locales/locale-ru.json
@@ -758,6 +758,9 @@
                 "hide_function_buttons": "Скрыть все кнопки, которыми можно управлять из персонализированной формы",
                 "increase_chart_height": " Увеличить высоту графика",
                 "market_location": "На какую сторону прикрепить вертикальный биржевой стакан. Это поменяет его местами с панелью рынка",
+                "market_trades": "",
+                "my_trades": "",
+                "open_orders": "",
                 "order_book_grouping": "Сгруппировать ордера, которые близки по заданному проценту",
                 "order_style": "Использовать вертикальный биржевой стакан для прикрепления к боковой панели",
                 "orderbook_auto_scroll": "Автоматически прокручивать биржевой стакан для просмотра новых ордеров. Отключите, чтобы разрешить прокрутку",
@@ -768,6 +771,7 @@
                 "reduce_scrollbars": "Отключить полосы прокрутки по умолчанию",
                 "reload": "Изменение этой опции вступит в силу только после ручной перезагрузки",
                 "reverse_order_book": "Отобразить биржевой стакан в обратном порядке, чтобы ордера на покупку отображались сверху",
+                "settlements": "",
                 "show_market_depth": "Показывать глубину рынка",
                 "show_price_chart": " Показывать график цен",
                 "single_colum_order_form": "Закрепить цену, количество, общую сумму и т.п. в одной колонке (неподвижно)"
@@ -951,6 +955,7 @@
         },
         "assets": {
             "backing_asset": "Актив обеспечения",
+            "blacklisted": "This asset is blacklisted, beware of scam attempts!",
             "id": "ID",
             "issuer": "Владелец актива",
             "market": "SmartCoins",
@@ -1074,6 +1079,8 @@
             "short": "Мост",
             "what_is": "Что такое мост?"
         },
+        "disabled_asset_1": "This asset is managed by an external service provider (gateway). Currently deposits and withdrawals for this asset are <b>disabled</b>",
+        "disabled_asset_2": "For more information visit Settings -> Entry External Service Providers. For any issues or questions please contact the gateway operator directly.",
         "expect_more": "Если вы хотите увидеть больше возможностей депозита и вывода для своих активов, ознакомьтесь с провайдерами внешних сервисов в разделе Настройки > Общие.",
         "gateway": {
             "description": "Шлюзы – это провайдеры внешних сервисов, которые позволяют вам вносить депозиты, торговать и выводить не нативные активы в блокчейне BitShares. Например, вы можете отправить свои BTC в блокчейне Bitcoin на шлюз, который, в свою очередь, выдаст вам UIA (выпущенный пользователем актив) в блокчейне BitShares, с возможностью вывести его снова (с оплатой комиссии). Пока вы держите такой UIA в блокчейне BitShares, шлюз является хранителем ваших средств. Поскольку это внешние провайдеры, вы косвенно соглашаетесь с их условиями использования сервисов или активов.",
@@ -1148,6 +1155,7 @@
             "open": "Актив %(asset)s обеспечивается реальными %(backed)s в соотношении 1:1 и может быть депонирован или выведен с помощью сервиса шлюза от OpenLedger.",
             "rudex": "Актив %(asset)s обеспечивается реальными %(backed)s в соотношении 1:1 и может быть депонирован или выведен с помощью сервиса шлюза от Rudex.",
             "trade": "Актив %(asset)s обеспечивается реальными %(backed)s в соотношении 1:1 и может быть депонирован или выведен с помощью сервиса шлюза от Blocktrades.",
+            "win": "",
             "xbtsx": "Актив %(asset)s обеспечен реальными %(backed)s в соотношении 1:1 и может быть введён/выведен с помощью сервиса шлюза от XBTS."
         },
         "balance": "Текущий баланс",
@@ -2006,6 +2014,7 @@
     },
     "settings": {
         "access": "Узлы",
+        "access_text": "",
         "accounts": "Аккаунты",
         "accounts_text": "Список ваших аккаунтов",
         "activate": "Активировать",
@@ -2191,7 +2200,8 @@
             },
             "steps_costs": {
                 "text": "Более длинный текст Более длинный текст Более длинный текст Более длинный текст Более длинный текст Более длинный текст Более длинный текст Более длинный текст Более длинный текст",
-                "title": "Погашение"
+                "title": "Погашение",
+                "title_within": ""
             },
             "steps_introduction": {
                 "text": "Используйте это нативное децентрализованное приложение на базе блокчейна BitShares для управления обеспечением депозита и генерацией SmartCoins.",
@@ -2659,6 +2669,7 @@
             "rangeNamed": "%(name)s должен быть в диапазоне от %(min)s до %(max)s",
             "required": "Поле обязательно для заполнения",
             "requiredNamed": "%(name)s обязательно",
+            "test": "",
             "types": {
                 "array": "Поле должно содержать массив",
                 "arrayNamed": "%(name)s должен быть массивом",
